# DOA

./: README.md
Lab1/: functions.cpp  functions.h  main.cpp  reader.cpp  reader.h
Lab2/: Doa lab2.docx  FileManager.cpp  FileManager.h  ListGeneration.cpp  ListGeneration.h  Sorts.cpp  Sorts.h  TimeMeasure.cpp  TimeMeasure.h  main.cpp
Lab2/Plots/Falling/data/: InsertionSortFalling.txt  QuickSortFalling.txt  QuickSortMedian3Falling.txt  SelectionSortFalling.txt  stdSortFalling.txt
Lab2/Plots/Random/data/: InsertionSortRandom.txt  QuickSortMedian3Random.txt  QuickSortRandom.txt  SelectionSortRandom.txt  stdSortRandom.txt
Lab2/Plots/Rising/data/: InsertionSortRising.txt  QuickSortMedian3Rising.txt  QuickSortRising.txt  SelectionSortRising.txt  stdSortRising.txt
Lab2/Plots/Same/data/: InsertionSortSame.txt  QuickSortMedian3Same.txt  QuickSortSame.txt  SelectionSortSame.txt  stdSortSame.txt
Lab2/Python/: main.py
Lab3/: BinarySearch.cpp  BinarySearch.h  BinarySearchTree.cpp  BinarySearchTree.h  CMakeLists.txt  FileManager.cpp  FileManager.h  Generation.cpp  Generation.h  HashTable.cpp  HashTable.h  LinearSearch.cpp  LinearSearch.h  LinearSearch.txt  TimeMeasure.cpp  TimeMeasure.h  main.cpp
Lab3/Python/: main.py
Lab3/Python/Data/: BinarySearch.txt  BinarySearchTree.txt  HashTable.txt  LinearSearch.txt
