cmake_minimum_required(VERSION 3.23)
project(Laboration_3)

set(CMAKE_CXX_STANDARD 14)

add_executable(Laboration_3 main.cpp Generation.cpp Generation.h LinearSearch.cpp LinearSearch.h BinarySearch.cpp BinarySearch.h BinarySearchTree.cpp BinarySearchTree.h HashTable.cpp HashTable.h FileManager.cpp FileManager.h TimeMeasure.cpp TimeMeasure.h)
